tests/NormalTests/paczka1/small_fuzzy/83004567.err
Error in line 3: m1bXg A28 84,4
Error in line 9: O4P A87 32,3
Error in line 12: O4P A541 97,9
